Switch flex-legacy default from true to false

--- a/src/less/_nth-grid.less
+++ b/src/less/_nth-grid.less
@@ -12,7 +12,7 @@
 @nth-grid-margin                : 0;
 @nth-grid-direction             : ltr;
 @nth-grid-flex                  : true;
-@nth-grid-flex-legacy           : true;
+@nth-grid-flex-legacy           : false;
 @nth-grid-float                 : false;
 @nth-grid-float-legacy          : false;
 
