--- a/src/sass/_nth-grid.import.scss
+++ b/src/sass/_nth-grid.import.scss
@@ -1191,9 +1191,9 @@ $nth-grid-warnings              : true !default;
                 '\A' + '$width              : #{$width}'
                 '\A' + '$order              : #{$order}'
                 '\A' + '$direction          : #{$direction}'
-                '\A' + '$flex               : #{$flex-legacy}'
+                '\A' + '$flex               : #{$flex}'
                 '\A' + '$flex-legacy        : #{$flex-legacy}'
-                '\A' + '$float              : #{$float-legacy}'
+                '\A' + '$float              : #{$float}'
                 '\A' + '$float-legacy       : #{$float-legacy}'
                 '\A' +
                 '\A' + '$auto-width         : #{$auto-width}'
