--- a/src/sass/_nth-grid.scss
+++ b/src/sass/_nth-grid.scss
@@ -1194,9 +1194,9 @@ $nth-grid-warnings: true !default;
                 '\A' + '$width              : #{$width}'
                 '\A' + '$order              : #{$order}'
                 '\A' + '$direction          : #{$direction}'
-                '\A' + '$flex               : #{$flex-legacy}'
+                '\A' + '$flex               : #{$flex}'
                 '\A' + '$flex-legacy        : #{$flex-legacy}'
-                '\A' + '$float              : #{$float-legacy}'
+                '\A' + '$float              : #{$float}'
                 '\A' + '$float-legacy       : #{$float-legacy}'
                 '\A' +
                 '\A' + '$auto-width         : #{$auto-width}'
