--- a/docs/style.css
+++ b/docs/style.css
@@ -248,13 +248,13 @@
 }
 
 [class*=grid-demo] > * {
-  background: var(--theme-color);
+  background: hsl(var(--theme-hue), var(--theme-saturation), var(--theme-lightness));
   color: #fff;
   text-align: center;
   padding: 0.25em 0.5em;
 }
-[class*=grid-demo] > :nth-child(odd) {
-  opacity: 0.5;
+[class*=grid-demo] > *:nth-child(-3n+200) {
+  --theme-lightness: 75%;
 }
 
 .grid-demo-columns-symmetric {
@@ -506,57 +506,57 @@
   visibility: hidden !important;
 }
 
-.grid-demo-usage1 {
+.grid-demo-usage-columns {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
   box-sizing: border-box;
   width: auto;
 }
-.grid-demo-usage1 > *:nth-child(1n) {
+.grid-demo-usage-columns > *:nth-child(1n) {
   box-sizing: border-box;
   position: static;
   left: auto;
   margin-top: 0;
   margin-left: 0;
 }
-.grid-demo-usage1 > *:nth-child(-n+3) {
+.grid-demo-usage-columns > *:nth-child(-n+3) {
   margin-top: 0;
 }
-.grid-demo-usage1 > *:nth-child(3n+1) {
+.grid-demo-usage-columns > *:nth-child(3n+1) {
   margin-left: 0;
 }
-.grid-demo-usage1 > *:nth-last-child(-n+3) {
+.grid-demo-usage-columns > *:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
-.grid-demo-usage1 > *:nth-child(1n) {
+.grid-demo-usage-columns > *:nth-child(1n) {
   width: 33.33333%;
 }
 
-.grid-demo-usage2 {
+.grid-demo-usage-rows {
   display: flex;
   flex-wrap: wrap;
   align-items: flex-start;
   box-sizing: border-box;
   width: auto;
 }
-.grid-demo-usage2 > *:nth-child(1n) {
+.grid-demo-usage-rows > *:nth-child(1n) {
   box-sizing: border-box;
   position: static;
   left: auto;
   margin-top: 2%;
   margin-left: 2%;
 }
-.grid-demo-usage2 > *:nth-child(-n+3) {
+.grid-demo-usage-rows > *:nth-child(-n+3) {
   margin-top: 0;
 }
-.grid-demo-usage2 > *:nth-child(3n+1) {
+.grid-demo-usage-rows > *:nth-child(3n+1) {
   margin-left: 0;
 }
-.grid-demo-usage2 > *:nth-last-child(-n+3) {
+.grid-demo-usage-rows > *:nth-last-child(-n+3) {
   margin-bottom: 0;
 }
-.grid-demo-usage2 > *:nth-child(1n) {
+.grid-demo-usage-rows > *:nth-child(1n) {
   width: 32%;
 }
 
